JT-2124 add translations to toc and fix alignment

--- a/app/assets/stylesheets/school_profiles/_toc.scss
+++ b/app/assets/stylesheets/school_profiles/_toc.scss
@@ -19,7 +19,7 @@
     border-bottom: solid 1px #dbe6eb;
     padding-bottom: 5px;
     vertical-align: middle;
-    line-height: 1.71;
+    min-height: 30px;
   }
 
   .toc-entry:last-child {
